--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="root"></div>
-  <div><small>updated 20240102</small></div>
+  <footer align="center"><small>updated 20240102</small></footer>
 
 </body>
 
