--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="root"></div>
-  <footer align="center"><small>updated 20240102</small></footer>
+  <footer align="center"><small>updated 2024-01-02</small></footer>
 
 </body>
 
